2009-08-19  Roland McGrath  <roland@redhat.com>

	* print-die.hh: Handle --norefs, --dump-refs.

2009-07-03  Roland McGrath  <roland@redhat.com>

	* print-die.hh: Grok --sort-attrs option to canonicalize order.
	Fix ref assignment to produce consistent numbering.
	* run-dwarf_edit.sh: Update expected output.
	* run-dwarf-attributes.sh: Likewise.

	* Makefile.am (AM_CXXFLAGS): New variable (from ../src/Makefile.am).

	* print-die.hh: Grok --edit/--output options to print a copied object.

2009-07-02  Roland McGrath  <roland@redhat.com>

	* run-dwarf_edit.sh: New file.
	* dwarf_edit.cc: New file.
	* Makefile.am (noinst_PROGRAMS, TESTS, EXTRA_DIST): Add them.
	(dwarf_edit_SOURCES, dwarf_edit_LDADD): New variables.

	* dwarf-print.cc (print_die): Templatify and move ...
	* print-die.hh: ... here, new file.
	* Makefile.am (noinst_HEADERS): New variable, add it.

2009-07-01  Roland McGrath  <roland@redhat.com>

	* run-dwarfcmp-self.sh: Run on dwarflint too.
	Fiddle failure output.

2009-06-15  Roland McGrath  <roland@redhat.com>

	* dwarf-print.cc: Include <cstdio>.

2009-03-25  Petr Machata  <pmachata@redhat.com>

	* dwarf-attributes.cc: New file.
	* Makefile.am (noinst_PROGRAMS): Add it.
	(dwarf_attributes_SOURCES, dwarf_attributes_LDADD): New variables.

2009-03-25  Roland McGrath  <roland@redhat.com>

	* dwarf-print.cc (print_die, process_file): Take LIMIT argument.
	Punt recursion at that depth.
	(main): Grok first argument --depth=N to set it.

2009-03-24  Roland McGrath  <roland@redhat.com>

	* dwarf-print.cc: New file.
	* Makefile.am (noinst_PROGRAMS): Add it.
	(dwarf_print_SOURCES, dwarf_print_LDADD): New variables.

2009-01-10  Roland McGrath  <roland@redhat.com>

	* run-dwarfcmp-self.sh: Also run with -T.

	* run-dwarflint-self.sh: --no-debug -> -i

	* run-dwarfcmp-self.sh: Run both with and without -q.

2009-01-10  Petr Machata  <pmachata@redhat.com>

	* run-dwarflint-self.sh: Pass new option --no-debug to dwarflint.
